gui/VehicleInfo: Fix Java9+ deprecation for new Integer.